tests/typing/errors/var_application/error.smt2
(set-logic QF_UFLIA)
(assert (let ((x 0)) (= (x x) 0)))
